# para-pro

./: CMakeLists.txt  README.md  calculate-pi.c  helloWorld.c  main.c  makefile  matrix-vector-parallel.c  matrix-vector-serial.c  openmp-example.c  openmp-trapezoid.c  trapezoidal.c
